--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1273,7 +1273,7 @@ section {
   padding: 12px 15px;
 }
 
-.book-a-table .php-email-form button[type=submit] {
+.book-a-table .php-email-form button[type=submit]{
   background: var(--color-primary);
   border: 0;
   padding: 14px 60px;
@@ -1282,9 +1282,25 @@ section {
   border-radius: 50px;
 }
 
-.book-a-table .php-email-form button[type=submit]:hover {
+.book-a-table .php-email-form button[type=submit]:hover{
   background: #ec2727;
 }
+
+
+.btn_separado{
+  background: var(--color-primary);
+  border: 0;
+  padding: 14px 60px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+  margin:4% 0 0 45%;
+}
+
+.btn_separado:hover{
+  background: #ec2727;
+}
+
 
 @keyframes animate-loading {
   0% {
